--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
     "body-parser": "^1.20.2",
+    "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.0"
   }
 }
